# strands-transcript-visualizer

./: .env.example  .gitignore  HOOK_VISUALIZER.md  README.md  REALTIME_MESSAGES.md  pyproject.toml  requirements.txt
conversation_manager/: __init__.py  custom_conversation_manager.py
hooks/: __init__.py  cache_point_hook_provider.py  message_hook_provider.py
sample_agents/: __init__.py  example_agent.py  example_agent_with_hooks.py  file_report_agent.py  file_report_agent_with_hooks.py  repo_analysis_agent.py
tests/: __init__.py  test_cache_point_hook_provider.py  test_generate_report.py  test_message_hook_provider.py  test_message_visualizer.py
visualizer/: __init__.py  conversation_visualizer.py  generate_hook_report.py  generate_report.py  hook_message_visualizer.py  message_visualizer.py
